--- a/synapsis/src/main/resources/application.properties
+++ b/synapsis/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.datasource.url=jdbc:postgresql://localhost/synapsis
+spring.datasource.username=postgres
+spring.datasource.password=pass
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
