Create secret env variable file for dev work

--- a/synapsis/src/main/resources/application.properties
+++ b/synapsis/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+spring.config.import=optional:secrets.properties
+
 spring.datasource.url=jdbc:postgresql://localhost/synapsis
 spring.datasource.username=postgres
-spring.datasource.password=pass
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
