--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
           cache: maven
 
       - name: Setup Maven
-        uses: stCarolas/setup-maven@4.5
+        uses: stCarolas/setup-maven@v4.5
         with:
           maven-version: 3.8.7
         
