Analyze all files

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -32,3 +32,4 @@ jobs:
         with:
           sourcePath: 'synapsis/src/main/java'
           rulesets: 'ruleset.xml'
+          analyzeModifiedFilesOnly: false
