Allow report generation

--- a/synapsis/pom.xml
+++ b/synapsis/pom.xml
@@ -115,6 +115,7 @@
                         <phase>test</phase>
                         <goals>
                             <goal>check</goal>
+                            <goal>report</goal>
                         </goals>
                         <configuration>
                             <rules>
