#21 implement SSO login with Google, including associated tests

--- a/synapsis/src/main/resources/application.properties
+++ b/synapsis/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+spring.security.oauth2.client.registration.google.client-id=337739041995-a0nn8plaogqpfp9s3d3ebevur0fksfak.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=mysecret
+spring.security.oauth2.client.registration.google.scope=email,profile
