--- a/synapsis/pom.xml
+++ b/synapsis/pom.xml
@@ -152,6 +152,14 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.7</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <configuration>
+                    <show>public</show>
+                </configuration>
+            </plugin>
         </plugins>
     </reporting>
 
