#119 Added notifications for connections and jobs. Added email notification system.

--- a/synapsis/src/main/resources/application.properties
+++ b/synapsis/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.config.import=optional:secrets.properties
-
 spring.datasource.url=jdbc:postgresql://localhost/synapsis
 spring.datasource.username=postgres
 spring.datasource.password=password
@@ -12,3 +11,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.security.oauth2.client.registration.google.client-id=337739041995-a0nn8plaogqpfp9s3d3ebevur0fksfak.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=mysecret
 spring.security.oauth2.client.registration.google.scope=email,profile
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=synapsis390@gmail.com
+spring.mail.password=smjrhftqpofnvwry
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
